--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <div class="collapse navbar-collapse" id="navbarExample">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="https://myfont.herokuapp.com/login">SignUp</a>
+                        <a class="nav-link page-scroll" href="https://myfont.herokuapp.com/signup">SignUp</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="https://myfont.herokuapp.com/signup">Login</a>
+                        <a class="nav-link page-scroll" href="https://myfont.herokuapp.com/login">Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#download">Download</a>
