--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Chetan">
 
     <title>MyFont</title>
+    <link rel="shortcut icon" href="/static/img/logo.jpg" />
 
     <!-- Bootstrap Core CSS -->
     <link href="static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -89,7 +90,7 @@
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/demo-screen-1.jpg" class="img-fluid" alt="">
+                                    <img src="img/logo.png" class="img-fluid" alt="">
                                 </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
