--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Chetan">
 
     <title>MyFont</title>
-    <link rel="shortcut icon" href="/static/img/logo.jpg" />
+    <link rel="shortcut icon" href="static/img/logo.png" />
 
     <!-- Bootstrap Core CSS -->
     <link href="static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -90,7 +90,7 @@
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/logo.png" class="img-fluid" alt="">
+                                    <img src="logo.png" class="img-fluid" alt="">
                                 </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -108,7 +108,7 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2">
                     <h2 class="section-heading">Discover what all the buzz is about!</h2>
-                    <p>Our app is available on any mobile device! Download now to get started!</p>
+                    <p>The app is available on the web adn any android mobile device! Signin or Download now to get started!</p>
                     <div class="badges">
                         <a class="badge-link" href="#"><img src="static/img/google-play-badge.svg" alt=""></a>
                         <a class="badge-link" href="#"><img src="static/img/app-store-badge.svg" alt=""></a>
@@ -183,7 +183,7 @@
     <section class="cta">
         <div class="cta-content">
             <div class="container">
-                <h2>Stop waiting.<br>Start building.</h2>
+                <h2>Stop writing.<br>Start typing.</h2>
                 <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
             </div>
         </div>
