--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>Decription about MyFont</h1>
+                            <h1>Convert your Handwriting to a PC-usable font within minutes</h1>
                             <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a>
                         </div>
                     </div>
@@ -108,10 +108,11 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2">
                     <h2 class="section-heading">Discover what all the buzz is about!</h2>
-                    <p>The app is available on the web adn any android mobile device! Signin or Download now to get started!</p>
+                    <p>The app is available on the web and any android mobile device for free. Signin or Download now to get started!</p>
                     <div class="badges">
-                        <a class="badge-link" href="#"><img src="static/img/google-play-badge.svg" alt=""></a>
-                        <a class="badge-link" href="#"><img src="static/img/app-store-badge.svg" alt=""></a>
+                      <a class="badge-link" href="https://myfont.herokuapp.com/signup"><img src="static/img/web-version.svg" alt="" ></a>
+                        <a class="badge-link" href="comingsoon.html"><img src="static/img/google-play-badge.svg" alt=""></a>
+
                     </div>
                 </div>
             </div>
@@ -121,8 +122,8 @@
     <section id="features" class="features">
         <div class="container">
             <div class="section-heading text-center">
-                <h2>Unlimited Features, Unlimited Fun</h2>
-                <p class="text-muted">Check out what you can do with this app theme!</p>
+                <h2>Unlimited handwriting recognition, Unlimited font conversion</h2>
+                <p class="text-muted">Check out what you can do with MyFont</p>
                 <hr>
             </div>
             <div class="row">
@@ -133,6 +134,7 @@
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
                                     <img src="img/demo-screen-1.jpg" class="img-fluid" alt=""> </div>
+
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
                                 </div>
@@ -146,15 +148,15 @@
                             <div class="col-lg-6">
                                 <div class="feature-item">
                                     <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Device Mockups</h3>
-                                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                    <h3>Runs across multiple devices, Android or Web</h3>
+                                    <p class="text-muted">Will be avilable for android phones shortly, but for now you can freely enjoy the web app</p>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="feature-item">
                                     <i class="icon-camera text-primary"></i>
-                                    <h3>Flexible Use</h3>
-                                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                                    <h3>Hassle-free image uploads</h3>
+                                    <p class="text-muted">Easily upload the image of your handwriting from you phone or PC</p>
                                 </div>
                             </div>
                         </div>
@@ -163,14 +165,14 @@
                                 <div class="feature-item">
                                     <i class="icon-present text-primary"></i>
                                     <h3>Free to Use</h3>
-                                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                                    <p class="text-muted">No hidden charges with unlimited image and font storage</p>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="feature-item">
                                     <i class="icon-lock-open text-primary"></i>
                                     <h3>Open Source</h3>
-                                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                                    <p class="text-muted">Once in Production, I plan to open source, the recognition engine that powers the app</p>
                                 </div>
                             </div>
                         </div>
@@ -183,8 +185,8 @@
     <section class="cta">
         <div class="cta-content">
             <div class="container">
-                <h2>Stop writing.<br>Start typing.</h2>
-                <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
+                <h2>Leave the pen.<br>Pick up your phone.</h2>
+                <a href="#download" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
             </div>
         </div>
         <div class="overlay"></div>
