--- a/comingsoon.html
+++ b/comingsoon.html
@@ -1,11 +1,7 @@
 <html>
 <head>
-
-
-
-
-
-    <title>MyFont app coming soon</title>
+  <title>MyFont</title>
+  <link rel="shortcut icon" href="static/img/logo.png" />
     <style>
     body{
   background: #EEE;
