logos for device mockups

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                 </div>
                 <div class="col-sm-5">
                     <div class="device-container">
-                        <div class="device-mockup iphone6_plus portrait white">
+                        <div class="device-mockup galaxy_s5 portrait white">
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="logo.png" class="img-fluid" alt="">
+                                    <img src="static/img/2.png" class="img-fluid" alt="">
                                 </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -150,11 +150,11 @@ characters are recognized. Then these characters are converted into the font tha
             <div class="row">
                 <div class="col-lg-4">
                     <div class="device-container">
-                        <div class="device-mockup iphone6_plus portrait white">
+                        <div class="device-mockup macbook portrait white">
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/demo-screen-1.jpg" class="img-fluid" alt=""> </div>
+                                    <img src="static/img/2.png" class="img-fluid" alt=""> </div>
 
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -163,6 +163,7 @@ characters are recognized. Then these characters are converted into the font tha
                         </div>
                     </div>
                 </div>
+
                 <div class="col-lg-8">
                     <div class="container-fluid">
                         <div class="row">
@@ -232,7 +233,7 @@ characters are recognized. Then these characters are converted into the font tha
 
     <footer>
         <div class="container">
-            <p>&copy; 2018 MyFont by Cheatn Malhotra. All Rights Reserved.</p>
+            <p>&copy; 2018 MyFont by Chetan Malhotra. All Rights Reserved.</p>
             <ul class="list-inline">
                 <li class="list-inline-item">
                     <a href="#">Privacy</a>
