contact area imporved

--- a/index.html
+++ b/index.html
@@ -216,17 +216,18 @@ characters are recognized. Then these characters are converted into the font tha
 
     <section id="contact" class="contact bg-primary">
         <div class="container">
-            <h2>We <i class="fa fa-heart"></i> new friends!</h2>
+            <h2>MyFont <i class="fa fa-heart"></i>s new friends!</h2>
             <ul class="list-inline list-social">
                 <li class="list-inline-item social-twitter">
-                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="https://twitter.com/MyFontapp"><i class="fa fa-twitter"></i></a>
+                </li>
+                <li class="list-inline-item social-linkedin">
+                    <a href="https://github.com/debuggermalhotra"><i class="fa fa-github-square"></i></a>
                 </li>
                 <li class="list-inline-item social-facebook">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/MyFont-176999116257283/"><i class="fa fa-facebook-square"></i></a>
                 </li>
-                <li class="list-inline-item social-google-plus">
-                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                </li>
+
             </ul>
         </div>
     </section>
