--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ characters are recognized. Then these characters are converted into the font tha
     <section class="cta">
         <div class="cta-content">
             <div class="container">
-                <h2>Leave the pen.<br>Pick up your phone.</h2>
+                <h2>Stop writing. <br>Start Typing</h2>
                 <a href="#download" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
             </div>
         </div>
