--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ characters are recognized. Then these characters are converted into the font tha
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="static/img/2.png" class="img-fluid" alt=""> </div>
+                                    <img src="static/img/macbook-mockup.png" class="img-fluid" alt=""> </div>
 
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
