--- a/index.html
+++ b/index.html
@@ -111,14 +111,12 @@
         <div class="container">
             <div class="section-heading text-center">
                 <h2>What is MyFont?</h2>
-                <p class="text-muted">MyFont is the ambitious idea and app that leverages Deep learning to convert your handwriting into a PC-usable font. MyFont is a
-web and android based app that will provide you with the capabilities to use your handwriting as a
-font on your PC. This app is an application of offline handwriting recognition using Deep neural nets. The app will
+                <p class="text-muted">MyFont is the ambitious idea and app that serves two purposes, first it leverages Deep learning to recognize your handwriting and converts your handwriting into a PC-usable font. This app is an application of offline handwriting recognition using Deep neural nets. The app will
 allow the user to click a photo of the handwritten content which should contain all the alphabets,
-digits, symbols present in english language(0-9, A-Z, a-z, ?,/,!,@,#,$, etc). The user can upload the image through their PCs too. The photo will then be
+digits present in english language(0-9, A-Z, a-z). The user can upload the image through their PCs too. The photo will then be
 passed in form of any of the many popular image formats to the Cloud. The pipeline including all the
 algorithms of character segmentation plus character recognition runs in the Cloud and each of the
-characters are recognized. Then these characters are converted into the font that you can download and use with your favorite word processor or office suite.</p>
+characters are recognized and the handwriting is recognized. For the font production part, these characters are converted into the font that you can download and use with your favorite word processor or office suite.</p>
                 <hr>
             </div>
                 </div>
