--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ characters are recognized and the handwriting is recognized. For the font produc
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="static/img/2.png" class="img-fluid" alt=""> </div>
+                                    <img src="https://github.com/MyFontapp/MyFontapp.github.io/blob/master/mockup1.png" class="img-fluid" alt=""> </div>
 
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
