--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                       <a class="nav-link page-scroll" href="#about">About</a>
                   </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="https://myfont.herokuapp.com/signup">SignUp</a>
+                        <a class="nav-link page-scroll" href="http://127.0.0.1:5000/signup">SignUp</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="https://myfont.herokuapp.com/login">Login</a>
+                        <a class="nav-link page-scroll" href="http://127.0.0.1:5000/login">Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#download">Download</a>
