--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>Convert your Handwriting to a PC-usable font within minutes</h1>
+                            <h1>Recognize your handwriting and convert it to a PC-usable font within minutes</h1>
                             <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a>
                         </div>
                     </div>
