--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                 </div>
                 <div class="col-sm-5">
                     <div class="device-container">
-                        <div class="device-mockup galaxy_s5 portrait white">
+                        <div class="device-mockup galaxy_s5 portrait black">
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="static/img/2.png" class="img-fluid" alt="">
+                                    <img src="static/img/mob.png" class="img-fluid" alt="">
                                 </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -152,7 +152,7 @@ characters are recognized and the handwriting is recognized. For the font produc
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="static/img/mockup1.png" class="img-fluid" alt=""> </div>
+                                    <img src="static/img/desk.png" class="" alt="" height="190px;" width="260px;"> </div>
 
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
